use liveModel to practice Bidirectional binding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="click">单击</string>
+    <string name="please_input_comment">请输入评论信息</string>
 </resources>
